NEWS for Seq66 0.99.17
Chris Ahlstrom
2015-07-10 to 2024-12-03

# Change Log

## [0.99.17]

This release is in progress....

### Added

### Changed

### Fixed

### Removed

## [0.99.16]

This release provides fixes to user issues and a ton of related
fixes found while investigating the user issues. Some minor new
features added.

### Changed

- Documentation. Refined discussion about the about the Import/Export
  functionality, and some of the minor additional features. Some new
  screenshots still needed.
- Build configuration. Added CONFIG\_DIR\_NAME and cleaned up
  configure.ac. Updated the Makefile sources.
- Merged a fix from a pull request (issue #130) to correct
  the \*.desktop files.
- Pattern editor.
    - Renamed [new-pattern-editor] to [pattern-editor] in the 'usr'
      file. Also added the "Apply to new only" option to Edit /
      Preferences / Display.
    - The Quantized Record button in the pattern editor now goes through
      this sequence when clicked: None, Tighten, Quantize, Notemap,
      None.... Also prettied-up the icons.
    - Enhancements to pattern-editor note copy/paste:
      - The paste-selection box now shows the selected notes,
        ghosted, for easier placement.
      - A right-click cancels a paste action in the pattern editor.
    - Undid a change from awhile back that broke the recording of
      fast-keyed notes on the same MIDI key. Still need to fix the
      occasional zero-length note.
    - Added provisional code to speed up recording. Grep for the macro
      SEQ66\_LINK\_NEWEST\_NOTE\_ON\_RECORD. Has potential issues, so
      it is undefined.
- Color palette. Added access functions for "scale" (new) and "extra"
  colors in the palette, to improve the coloring (e.g. of the bars
  denoting notes in the scale of the pattern editor) in certain Qt
  style-sheet usages.
- Event editor. Enhanced writing pattern-dump files from the event
  editor.

### Fixed
